add cgo to actions env
Change-Id: I5bca97ff53c01be9677053f449a42c7f42d5074f

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,7 @@ jobs:
           go-version: ${{ steps.goversion.outputs.goversion }}
       - env:
           TARGET: ${{ matrix.target }}
+          CGO_ENABLED: 1
         run: |
           set -euo pipefail
 
