fix snapshot and add c deps
Change-Id: I63ff3bd3a37341267aec5517b7865f726efd30b8

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -20,6 +20,7 @@ jobs:
       - env:
           TARGET: ${{ matrix.target }}
         run: |
+          sudo apt-get install gcc-multilib g++-multilib
           mkdir "${TARGET}"
           case "${TARGET}" in
             linux-amd64-coverage)
