--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,7 @@ jobs:
           CGO_ENABLED: 1
         run: |
           set -euo pipefail
+          sudo apt-get install gcc-multilib g++-multilib
 
           echo "${TARGET}"
           case "${TARGET}" in
