--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -22,6 +22,7 @@ jobs:
           TARGET: ${{ matrix.target }}
         run: |
           set -euo pipefail
+          sudo apt-get install gcc-multilib g++-multilib
           go clean -testcache
 
           echo "${TARGET}"
