--- a/.github/workflows/fuzzing.yaml
+++ b/.github/workflows/fuzzing.yaml
@@ -18,8 +18,8 @@ jobs:
           go-version: ${{ steps.goversion.outputs.goversion }}
       - run: |
           set -euo pipefail
-
-          GOARCH=amd64 CPU=4 make fuzz
+          sudo apt-get install gcc-multilib g++-multilib
+          GOARCH=amd64 CPU=4 CGO_ENABLED=1 make fuzz
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         if: failure()
         with:
